--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,7 +42,7 @@ jobs:
         uses: emibcn/badge-action@v2.0.3
         id: badge
         with:
-            label: "${{needs.test.outputs.epoch}} | ${{needs.test.outputs.tick}}"
+            label: "test (${{needs.test.outputs.epoch}} | ${{needs.test.outputs.tick}})"
             status: ${{needs.test.outputs.status}}
             color: ${{needs.test.outputs.color}}
             path: '.github/badges/test.svg'
@@ -57,12 +57,8 @@ jobs:
       - uses: actions/checkout@v4
         continue-on-error: true
       - run: |
-            git config --local user.email "action@github.com"
-            git config --local user.name "GitHub Action"
-            git add "./github/badges/test.svg"
-            git commit -m "Add/Update badge"
-            git config user.name github-actions
-            git config user.email github-actions@github.com
-            git add .
-            git commit -m "generated test badge"
-            git push
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add ".github/badges/test.svg"
+          git commit -m "generated test badge"
+          git push
