--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,7 +56,7 @@ jobs:
             if-no-files-found: error
         
       - continue-on-error: true
-      - run: |
+        run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .github/badges/test.svg
