--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,7 +32,7 @@ jobs:
   badge:
     runs-on: ubuntu-latest
     needs: test
-    if: ${{ always() }}
+    if: ${{ github.actor != 'github-actions' && github.event_name == 'push' }}
     steps:
       - uses: actions/checkout@v4
       - name: Create badges dir
