--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,6 +35,8 @@ jobs:
     if: ${{ github.actor != 'github-actions' && github.event_name == 'pull_request' }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref_name }}
       - name: Create badges dir
         run: mkdir -p '.github/badges/'
         
