--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "qubic-lrv",
-  "main": "./src/client.js",
-  "module": "./src/client.js",
+  "version": "0.0.0",
+  "main": "./src/lrv.js",
+  "module": "./src/lrv.js",
   "dependencies": {
     "qubic-crypto": "github:computor-tools/qubic-crypto#ad4298266dc4bddc6cbca7a362f9f9f1d6eb2834"
   },
   "trustedDependencies": ["qubic-crypto"],
-  "type": "module"
+  "type": "module",
+  "optionalDependencies": {
+    "uWebSockets.js": "uNetworking/uWebSockets.js#v20.41.0"
+  }
 }
